# gwd

./: .gitignore  .travis.yml  Makefile  dune  gnt-gwd.opam  gwd.opam  gwxjg.opam
doc/: TYPES.MD
etc/: homonyms.html.jingoo  list_ind.html.jingoo
src/: api_app.ml  api_app.proto  data.ml  dune  ezgw.ml  gwd.ml  handler.ml  i18n.mll  interp.ml  lexicon_parser.mll  marshaler.ml  marshaler_lib.ml  trans.ml  types.mli
tests/: bench.ml  bench_data.ml  dune  test.ml  test_data.ml  test_marshaler.ml  test_utils.ml
