opam-version: "2.0"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Julien Sagot" ]

dev-repo: "git://github.com/geneanet/gwd"

bug-reports: "https://github.com/geneanet/gwd/issues"

homepage: "https://github.com/geneanet/gwd"

build: [ [ make ] ]

install: [ [ make "install" ] ]

remove: [ [ make "uninstall" ] ]

depends: [
  "dune" { build>= "1.1.1" }
  "geneweb" { = "dev" }
  "jingoo" { = "dev" }
  "ocaml" { >= "4.05" }
]
