(ocamllex lexicon_parser)

(library
  (public_name gwxjg)
  (wrapped false)
  (libraries unix geneweb.gwdb1 geneweb.wserver geneweb jingoo)
  (modules ezgw data trans lexicon_parser)
)

(library
  (name marshaler_lib)
  (wrapped false)
  (libraries jingoo gwxjg)
  (modules marshaler_lib)
)

(executable
  (package gwd)
  (name gwd)
  (public_name gwd)
  (libraries gwxjg marshaler_lib geneweb jingoo)
  (modules gwd handler interp)
)

(executable
  (name marshaler)
  (libraries uucp jingoo gwxjg marshaler_lib)
  (modules marshaler)
)
