(ocamllex lexicon_parser)

(library
  (name gwd_lib)
  (wrapped false)
  (libraries geneweb jingoo)
  (modules ezgw data trans lexicon_parser)
)

(library
  (name marshaler_lib)
  (wrapped false)
  (libraries jingoo gwd_lib)
  (modules marshaler_lib)
)

(executable
  (name gwd)
  (public_name gwd)
  (libraries gwd_lib marshaler_lib geneweb jingoo)
  (modules gwd handler interp)
)

(executable
  (name marshaler)
  (libraries uucp jingoo gwd_lib marshaler_lib)
  (modules marshaler)
)
