(ocamllex lexicon_parser)

(rule
 (deps api_app.proto)
 (targets api_app_piqi.ml api_app_piqi_ext.ml)
 (action (progn
           (run piqi of-proto --normalize api_app.proto)
           (run piqic-ocaml --ext api_app.proto.piqi))))

(library
  (public_name gwxjg)
  (wrapped false)
  (libraries unix geneweb.gwdb1 geneweb.wserver geneweb jingoo)
  (modules ezgw data trans lexicon_parser)
)

(library
  (name marshaler_lib)
  (wrapped false)
  (libraries jingoo gwxjg)
  (modules marshaler_lib)
)

(executable
  (package gwd)
  (name gwd)
  (public_name gwd)
  (libraries uutf uucp unidecode gwxjg marshaler_lib geneweb jingoo piqirun.ext)
  (modules api_app_piqi api_app_piqi_ext api_app gwd handler interp)
)

(executable
  (name marshaler)
  (libraries uucp jingoo gwxjg marshaler_lib)
  (modules marshaler)
)
