(library
  (name test_lib)
  (wrapped false)
  (libraries geneweb gwxjg)
  (modules test_utils)
)

(executable
  (name test)
  (libraries jingoo test_lib gwxjg marshaler_lib oUnit)
  (modules test test_data test_marshaler)
)

(executable
  (name bench)
  (libraries benchmark test_lib gwxjg oUnit)
  (modules bench bench_data)
)

(alias (name runtest) (action (run ./test.exe) ) )

(alias (name runbench) (action (run ./bench.exe) ) )
